Fixed spacing issue on Job Delete Modal

--- a/frontend/src/components/jobdeletemodal/jobdeletemodal.css
+++ b/frontend/src/components/jobdeletemodal/jobdeletemodal.css
@@ -10,6 +10,7 @@
 }
 
 .jobDeleteModal h1 {
+  margin-left: 0;
   color: #ffeedb;
 }
 
